--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,6 +6,31 @@
 	}
 }
 
+/* TABLET AND MOBILE */
+@media (max-width: 1023px) {
+	.place-buy-btn {
+		padding: 15px 16px;
+	}
+
+	.contact-form .form-submit-btn {
+		padding: 15px;
+	}
+	.social-list {
+		font-size: 48px;
+	}
+
+	#footer .social-lists a {
+		margin: 0 8px;
+	}
+	.copy-right {
+		padding: 12px o;
+	}
+
+	.contact-info {
+		line-height: 1.6;
+	}
+}
+
 /* TABLET */
 @media (min-width: 740px) and (max-width: 1023px) {
 	#header .search-btn {
@@ -14,11 +39,57 @@
 }
 
 /* MOBILE */
-@media (max-width: 740px) {
+@media (max-width: 739px) {
+	.s-full-width,
+	.s-col-full {
+		width: 100% !important;
+	}
+
+	.s-mt-8 {
+		margin-top: 8px !important;
+	}
+	#nav {
+		display: block;
+	}
 	#nav > li {
 		display: block;
 	}
+	#nav > li:first-child {
+		display: inline-block;
+	}
+
+	#nav .subnav {
+		position: initial;
+		/* de bo di position absolute cua PC */
+	}
+
+	#nav li {
+		display: block;
+		background-color: black;
+	}
+
+	#nav .subnav a {
+		color: white;
+		padding: 10px 41px;
+	}
 	#header .search-btn {
 		display: none;
+	}
+	#header {
+		overflow: hidden;
+	}
+
+	#content .member-item {
+		margin: 30px;
+		margin-left: -10px;
+		width: 100%;
+	}
+
+	#content .member-img {
+		width: 60%;
+	}
+
+	.contact-from {
+		margin-top: 16px;
 	}
 }
